kubernetes/apps/home-assistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.pxldi.de`)
      services:
        - name: home-assistant
          port: 8123
